name:                distributed-simulator
version:             0.1.0.0
homepage:            https://github.com/kderme/Distributed-Simulator#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantinos Dermentzis
maintainer:          k.dermenz@gmail.com
copyright:           2017 Konstantinos Dermentzis
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VProcess
                     , Simulator
                     , Schedulers.Interactive
                     , Schedulers.FifoScheduler
                     , Examples.Counter
                     , Examples.SayHi
                     , TreeSimulator
  build-depends:       base >= 4.7 && < 5, mtl, containers, binary, random
  ghc-options:         -Wall
  default-language:    Haskell2010

executable counter-simulation
  hs-source-dirs:      app/examples/counter/
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , distributed-simulator
  default-language:    Haskell2010

executable sayhi-simulation
  hs-source-dirs:      app/examples/sayhi/
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , distributed-simulator
  default-language:    Haskell2010

test-suite simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simulator
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kderme/Distributed-Simulator
